--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,26 @@
 spring:
   application:
     name: github-manager
+  datasource:
+    url: jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
 github:
   client:
     base-url: https://api.github.com/repos
     repo-owner: Aulas-Engenharia-de-software
     user-agent: LucasMartins007
-    branches-endpoint: /branches
-    commits-endpoint: /commits
+    branches-endpoint: branches
+    commits-endpoint: commits
   security:
     token: ${TOKEN}
-
-
-
